:recycle: Update run configuration and script references to reflect the change from 'app-js' to 'app-web'

--- a/conduit-frontend/app-web/src/jsMain/resources/index.html
+++ b/conduit-frontend/app-web/src/jsMain/resources/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
 <canvas id="ConduitCanvas"></canvas>
-<script src="app-js.js"></script> <!-- the name here corresponds to the gradle module name-->
+<script src="app-web.js"></script> <!-- the name here corresponds to the gradle module name-->
 </body>
 </html>
