:recycle: Refactor web JS app initialization and styling
Separate browser setup, improve HTML structure, and move styles to CSS file for better maintainability

--- a/conduit-frontend/app-web/src/jsMain/resources/index.html
+++ b/conduit-frontend/app-web/src/jsMain/resources/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <script src="skiko.js"></script>
+    <title>KotlinProject</title> <!-- will be changed by our code -->
     <!--
           This is important for mobile devices. See here for more information:
           https://developer.mozilla.org/en-US/docs/Web/CSS/Viewport_concepts#mobile_viewports
         -->
     <meta name="viewport" content="width=device-width">
+    <link type="text/css" rel="stylesheet" href="styles.css">
 </head>
 <body>
-<canvas id="ConduitCanvas"></canvas>
-<script src="app-web.js"></script> <!-- the name here corresponds to the gradle module name-->
+    <canvas id="ConduitCanvas"></canvas>
+    <script type="application/javascript" src="app-web.js"></script> <!-- the name here corresponds to the gradle module name or wasmJs {} setup -->
 </body>
 </html>
