🎨 Refactor web UI setup and improve styles
Simplify browser UI setup, adjust canvas styling, and update loading screen title for better user experience

--- a/conduit-frontend/app-web/src/jsMain/resources/index.html
+++ b/conduit-frontend/app-web/src/jsMain/resources/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <script src="skiko.js"></script>
-    <title>KotlinProject</title> <!-- will be changed by our code -->
+    <title>Loading Conduit ...</title> <!-- will be changed by our code -->
     <!--
           This is important for mobile devices. See here for more information:
           https://developer.mozilla.org/en-US/docs/Web/CSS/Viewport_concepts#mobile_viewports
