--- a/conduit-frontend/app-web/src/wasmJsMain/resources/index.html
+++ b/conduit-frontend/app-web/src/wasmJsMain/resources/index.html
@@ -7,7 +7,7 @@
           https://developer.mozilla.org/en-US/docs/Web/CSS/Viewport_concepts#mobile_viewports
         -->
     <meta name="viewport" content="width=device-width">
-    <title>KotlinProject</title> <!-- will be changed by our code -->
+    <title>Loading Conduit ...</title> <!-- will be changed by our code -->
     <link type="text/css" rel="stylesheet" href="styles.css">
     <script type="application/javascript" src="app-web.js"></script>
 </head>
